--- a/app/src/main/res/layout/dialog_time.xml
+++ b/app/src/main/res/layout/dialog_time.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<DatePicker
+<TimePicker
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:calendarViewShown = "false"
-    android:id="@+id/dialog_datePicker"
-    android:orientation="vertical">
-</DatePicker>
+    android:id="@+id/dialog_timePicker">
+
+</TimePicker>
