--- a/app/src/main/res/layout/fragment_crime.xml
+++ b/app/src/main/res/layout/fragment_crime.xml
@@ -23,14 +23,14 @@
                 android:layout_marginTop="15dp"
                 android:orientation="vertical">
 
-                <!--<ImageView-->
-                    <!--android:id="@+id/crime_imageView"-->
-                    <!--android:layout_width="80dp"-->
-                    <!--android:layout_height="80dp"-->
-                    <!--android:layout_marginBottom="10dp"-->
-                    <!--android:background="@android:color/darker_gray"-->
-                    <!--android:cropToPadding="true"-->
-                    <!--android:scaleType="centerInside" />-->
+                <ImageView
+                    android:id="@+id/crime_imageView"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="@android:color/darker_gray"
+                    android:cropToPadding="true"
+                    android:scaleType="centerInside" />
 
                 <!--<ImageButton-->
                     <!--android:id="@+id/crime_imageButton"-->
