--- a/app/src/main/res/layout/fragment_crime.xml
+++ b/app/src/main/res/layout/fragment_crime.xml
@@ -23,14 +23,14 @@
                 android:layout_marginTop="15dp"
                 android:orientation="vertical">
 
-                <ImageView
-                    android:id="@+id/crime_imageView"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:layout_marginBottom="10dp"
-                    android:background="@android:color/darker_gray"
-                    android:cropToPadding="true"
-                    android:scaleType="centerInside" />
+                <!--<ImageView-->
+                    <!--android:id="@+id/crime_imageView"-->
+                    <!--android:layout_width="80dp"-->
+                    <!--android:layout_height="80dp"-->
+                    <!--android:layout_marginBottom="10dp"-->
+                    <!--android:background="@android:color/darker_gray"-->
+                    <!--android:cropToPadding="true"-->
+                    <!--android:scaleType="centerInside" />-->
 
                 <!--<ImageButton-->
                     <!--android:id="@+id/crime_imageButton"-->
@@ -73,7 +73,7 @@
                     android:text="@string/crime_object_text" />
 
                 <Button
-                    android:id="@+id/crime_suspectButton"
+                    android:id="@+id/crime_personButton"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="16dp"
@@ -106,7 +106,7 @@
             android:layout_height="wrap_content">
 
             <Button
-                android:id="@+id/crime_reportButton"
+                android:id="@+id/choose_pair"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
